--- a/src/App/Footer/Footer.css
+++ b/src/App/Footer/Footer.css
@@ -1,11 +1,6 @@
 footer {
     color: white;
 }
-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-}
 footer .container {
     padding: 15px;
 }
